<resources>
    <string name="app_name">PM1E1602805</string>
    <string name="tagCapturar">Capturar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnLista">Ver lista</string>
    <string name="tagNombre">Nombre</string>
    <string name="tagNota">Agregar nota</string>
    <string name="btnbuscar">Volver</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnCompartir">Compartir</string>
    <string name="btnVer">Ver Contacto\n</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnActualizar">Actualizar\n</string>
    <string name="txtCodPais">Ingrese Código</string>
    <string name="txtPais">Ingrese País</string>
    <string name="pruebita">prueba</string>
</resources>