<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaActivity">

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFEFE"
        android:text="@string/btnRegresar"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegresar" />

    <ListView
        android:id="@+id/listacontactos"
        android:layout_width="377dp"
        android:layout_height="411dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#0648ED"
        android:text="@string/btnCompartir"
        app:layout_constraintEnd_toStartOf="@+id/btnVer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listacontactos" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#0648ED"
        android:insetTop="4dp"
        android:text="@string/btnVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCompartir"
        app:layout_constraintTop_toBottomOf="@+id/listacontactos" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#0648ED"
        android:text="@string/btnEliminar"
        app:layout_constraintEnd_toStartOf="@+id/btnActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartir" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#0648ED"
        android:text="@string/btnActualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminar"
        app:layout_constraintTop_toBottomOf="@+id/btnVer" />

</androidx.constraintlayout.widget.ConstraintLayout>